--- a/wgpu-native/Cargo.toml
+++ b/wgpu-native/Cargo.toml
@@ -28,13 +28,13 @@ bitflags = "1.0"
 copyless = "0.1"
 lazy_static = "1.1.0"
 log = "0.4"
-hal = { package = "gfx-hal", version = "0.2.1" }
-gfx-backend-empty = { version = "0.2.1" }
-gfx-backend-vulkan = { version = "0.2", optional = true }
-gfx-backend-dx11 = { version = "0.2.1", optional = true }
-gfx-backend-dx12 = { version = "0.2.1", optional = true }
-gfx-backend-metal = { version = "0.2.2", optional = true }
-gfx-backend-gl = { version = "0.2", optional = true }
+hal = { package = "gfx-hal", version = "0.2" }
+gfx-backend-empty = { git = "https://github.com/kyren/gfx", branch = "mothra" }
+gfx-backend-vulkan = { git = "https://github.com/kyren/gfx", branch = "mothra", optional = true }
+gfx-backend-dx11 = { git = "https://github.com/kyren/gfx", branch = "mothra", optional = true }
+gfx-backend-dx12 = { git = "https://github.com/kyren/gfx", branch = "mothra", optional = true }
+gfx-backend-metal = { git = "https://github.com/kyren/gfx", branch = "mothra", optional = true }
+gfx-backend-gl = { git = "https://github.com/kyren/gfx", branch = "mothra", optional = true }
 parking_lot = { version = "0.8" }
 rendy-memory = "0.3"
 rendy-descriptor = "0.3"
