--- a/wgpu-native/Cargo.toml
+++ b/wgpu-native/Cargo.toml
@@ -28,7 +28,7 @@ bitflags = "1.0"
 copyless = "0.1"
 lazy_static = "1.1.0"
 log = "0.4"
-hal = { package = "gfx-hal", version = "0.2" }
+hal = { package = "gfx-hal", git = "https://github.com/kyren/gfx", branch = "mothra" }
 gfx-backend-empty = { git = "https://github.com/kyren/gfx", branch = "mothra" }
 gfx-backend-vulkan = { git = "https://github.com/kyren/gfx", branch = "mothra", optional = true }
 gfx-backend-dx11 = { git = "https://github.com/kyren/gfx", branch = "mothra", optional = true }
@@ -36,8 +36,8 @@ gfx-backend-dx12 = { git = "https://github.com/kyren/gfx", branch = "mothra", op
 gfx-backend-metal = { git = "https://github.com/kyren/gfx", branch = "mothra", optional = true }
 gfx-backend-gl = { git = "https://github.com/kyren/gfx", branch = "mothra", optional = true }
 parking_lot = { version = "0.8" }
-rendy-memory = "0.3"
-rendy-descriptor = "0.3"
+rendy-memory = { git = "https://github.com/kyren/rendy", branch = "mothra" }
+rendy-descriptor = { git = "https://github.com/kyren/rendy", branch = "mothra" }
 serde = { version = "1.0", features = ["serde_derive"], optional = true }
 vec_map = "0.8"
 
