--- a/wgpu-native/Cargo.toml
+++ b/wgpu-native/Cargo.toml
@@ -50,3 +50,8 @@ gfx-backend-vulkan = { version = "0.4", features = ["x11"] }
 gfx-backend-dx12 = { version = "0.4.1" }
 gfx-backend-dx11 = { version = "0.4" }
 gfx-backend-vulkan = { version = "0.4" }
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+gfx-backend-gl = { version = "0.4" }
+web-sys = { version = "0.3.6", features = ["Document", "Element", "HtmlElement", "HtmlCanvasElement"] }
+wasm-bindgen = { version = "0.2.40" }
