--- a/wgpu-native/Cargo.toml
+++ b/wgpu-native/Cargo.toml
@@ -50,3 +50,8 @@ gfx-backend-vulkan = { git = "https://github.com/gfx-rs/gfx", rev = "46386475f7e
 gfx-backend-dx12 = { git = "https://github.com/gfx-rs/gfx", rev = "46386475f7e823e807ec984c372ffe04dcc0a22b" }
 gfx-backend-dx11 = { git = "https://github.com/gfx-rs/gfx", rev = "46386475f7e823e807ec984c372ffe04dcc0a22b" }
 gfx-backend-vulkan = { git = "https://github.com/gfx-rs/gfx", rev = "46386475f7e823e807ec984c372ffe04dcc0a22b" }
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+gfx-backend-gl = { git = "https://github.com/gfx-rs/gfx", rev = "46386475f7e823e807ec984c372ffe04dcc0a22b" }
+web-sys = { version = "0.3.6", features = ["Document", "Element", "HtmlElement", "HtmlCanvasElement"] }
+wasm-bindgen = { version = "0.2.40" }
