--- a/wgpu-native/Cargo.toml
+++ b/wgpu-native/Cargo.toml
@@ -28,23 +28,26 @@ bitflags = "1.0"
 copyless = "0.1"
 lazy_static = "1.1.0"
 log = "0.4"
-hal = { package = "gfx-hal", git = "https://github.com/gfx-rs/gfx", rev = "3d5db15661127c8cad8d85522a68ec36c82f6e69" }
-gfx-backend-empty = { git = "https://github.com/gfx-rs/gfx", rev = "3d5db15661127c8cad8d85522a68ec36c82f6e69" }
+hal = { package = "gfx-hal", git = "https://github.com/kyren/gfx", branch = "rodan" }
+gfx-backend-empty = { git = "https://github.com/kyren/gfx", branch = "rodan" }
 parking_lot = "0.9"
 raw-window-handle = "0.1"
-rendy-memory = { git = "https://github.com/amethyst/rendy", rev = "e8ffcabc2bc74fbb282d4f71fa55c28d0ec31c86" }
-rendy-descriptor = { git = "https://github.com/amethyst/rendy", rev = "e8ffcabc2bc74fbb282d4f71fa55c28d0ec31c86" }
+rendy-memory = { git = "https://github.com/kyren/rendy", branch = "rodan" }
+rendy-descriptor = { git = "https://github.com/kyren/rendy", branch = "rodan" }
 serde = { version = "1.0", features = ["serde_derive"], optional = true }
 vec_map = "0.8"
 
 [target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
-gfx-backend-metal = { git = "https://github.com/gfx-rs/gfx", rev = "3d5db15661127c8cad8d85522a68ec36c82f6e69" }
-gfx-backend-vulkan = { git = "https://github.com/gfx-rs/gfx", rev = "3d5db15661127c8cad8d85522a68ec36c82f6e69", optional = true }
+gfx-backend-metal = { git = "https://github.com/kyren/gfx", branch = "rodan" }
+gfx-backend-vulkan = { git = "https://github.com/kyren/gfx", branch = "rodan", optional = true }
 
 [target.'cfg(all(unix, not(target_os = "ios"), not(target_os = "macos")))'.dependencies]
-gfx-backend-vulkan = { git = "https://github.com/gfx-rs/gfx", rev = "3d5db15661127c8cad8d85522a68ec36c82f6e69", features = ["x11"] }
+gfx-backend-vulkan = { git = "https://github.com/kyren/gfx", branch = "rodan", features = ["x11"] }
 
 [target.'cfg(windows)'.dependencies]
-gfx-backend-dx12 = { git = "https://github.com/gfx-rs/gfx", rev = "3d5db15661127c8cad8d85522a68ec36c82f6e69" }
-gfx-backend-dx11 = { git = "https://github.com/gfx-rs/gfx", rev = "3d5db15661127c8cad8d85522a68ec36c82f6e69" }
-gfx-backend-vulkan = { git = "https://github.com/gfx-rs/gfx", rev = "3d5db15661127c8cad8d85522a68ec36c82f6e69" }
+gfx-backend-dx12 = { git = "https://github.com/kyren/gfx", branch = "rodan" }
+gfx-backend-dx11 = { git = "https://github.com/kyren/gfx", branch = "rodan" }
+gfx-backend-vulkan = { git = "https://github.com/kyren/gfx", branch = "rodan" }
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+gfx-backend-gl = { git = "https://github.com/kyren/gfx", branch = "rodan" }
